--- a/artefact-laravel/package.json
+++ b/artefact-laravel/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.10.3",
     "axios": "^0.19",
     "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
     "cross-env": "^7.0",
     "css-loader": "^3.6.0",
     "handlebars-loader": "^1.7.1",
@@ -39,6 +40,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backbone": "^1.4.0",
     "handlebars": "^4.7.6",
     "jquery": "^3.5.1"
   }
