--- a/artefact-laravel/package.json
+++ b/artefact-laravel/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "npm run development",
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
+    "watch": "webpack --mode=development --watch",
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
@@ -14,18 +14,19 @@
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "axios": "^0.19",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
-    "cross-env": "^7.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "handlebars-loader": "^1.7.1",
-    "laravel-mix": "^5.0.1",
+    "laravel-mix": "^5.0.4",
     "lodash": "^4.17.13",
     "resolve-url-loader": "^3.1.0",
-    "sass": "^1.15.2",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
