--- a/artefact-laravel/package.json
+++ b/artefact-laravel/package.json
@@ -14,18 +14,19 @@
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
-    "axios": "^0.19",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
-    "cross-env": "^7.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "handlebars-loader": "^1.7.1",
-    "laravel-mix": "^5.0.1",
+    "laravel-mix": "^5.0.4",
     "lodash": "^4.17.13",
     "resolve-url-loader": "^3.1.0",
-    "sass": "^1.15.2",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
@@ -42,6 +43,7 @@
   "dependencies": {
     "backbone": "^1.4.0",
     "handlebars": "^4.7.6",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "underscore": "^1.10.2"
   }
 }
