--- a/artefact-laravel/package.json
+++ b/artefact-laravel/package.json
@@ -45,6 +45,7 @@
   "license": "ISC",
   "dependencies": {
     "backbone": "^1.4.0",
+    "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "underscore": "^1.10.2"
   }
