--- a/artefact-laravel/package.json
+++ b/artefact-laravel/package.json
@@ -49,6 +49,7 @@
     "faker": "^4.1.0",
     "handlebars": "^4.7.6",
     "multiple-select": "^1.5.2",
+    "shufflejs": "^5.2.3",
     "underscore": "^1.10.2"
   }
 }
